fix: tags wrapping

--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -205,6 +205,7 @@ button span.hide-on-mobile {
 
 .tags {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
 }
 
